# 1bitllm-macos

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
app/: core.py  main.py
scripts/: validate_model.sh
