[project]
name = "mlx-bitnet"
version = "0.1.0"
description = "FastAPI proxy for Docker Model Runner serving mlx-community/bitnet-b1.58-2B-4T"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
